k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: api
    template:
        metadata:
            labels:
                component: api
        spec:
            containers:
                - name: blackblade-api
                  image: brandonwade/blackblade-api:latest
                  ports:
                      - containerPort: 8000
            imagePullSecrets:
                - name: regcred
