k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: client
    template:
        metadata:
            labels:
                component: client
        spec:
            containers:
                - name: blackblade-client
                  image: brandonwade/blackblade-client:latest
                  resources:
                      requests:
                          memory: '50Mi'
                          cpu: '25m'
                      limits:
                          memory: '100Mi'
                          cpu: '50m'
                  ports:
                      - containerPort: 8200
