k8s/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: db
    template:
        metadata:
            labels:
                component: db
        spec:
            volumes:
                - name: db-storage
                  persistentVolumeClaim:
                      claimName: db-persistent-volume-claim
            containers:
                - name: blackblade-db
                  image: brandonwade/blackblade-db:latest
                  args:
                      - '--sql-mode='
                  ports:
                      - containerPort: 3306
                  volumeMounts:
                      - name: db-storage
                        mountPath: /var/lib/mysql
            imagePullSecrets:
                - name: regcred
