k8s/client-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: client
    ports:
        - port: 8200
          targetPort: 8200
