k8s/db-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
    name: db-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: db
    ports:
        - port: 3306
          targetPort: 3306
